# sit-igp-management

./: .editorconfig  .gitignore  Procfile  README.md  requirements.txt
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  fly.toml  pyproject.toml  setup.cfg
backend/backend/: __init__.py  dependencies.py  init_app.py  main.py  webapi.py
backend/backend/adapters/pg/: __init__.py  base_repository.py  lab_rotation_repository_adapter.py  lab_seminar_repository_adapter.py  presentation_evaluation_repository.py  presentation_evaluation_repository_adapter.py  presentation_repository_adapter.py  presentations_service.py  professor_repository_adapter.py  student_repository_adapter.py  thesis_program_repository_adapter.py
backend/backend/adapters/webapi/: responses.py
backend/backend/api/: __init__.py  api.py  router_dependencies.py
backend/backend/api/presentation_evaluations/: __init__.py  presentation_evaluations_dto.py  presentation_evaluations_entities.py  presentation_evaluations_router.py  presentation_evaluations_schema.py  presentation_evaluations_service.py
backend/backend/api/presentations/: __init__.py  presentations_dto.py  presentations_entities.py  presentations_router.py  presentations_schema.py
backend/backend/api/professors/: __init__.py  professors_dto.py  professors_entities.py  professors_router.py  professors_schema.py  professors_service.py
backend/backend/api/semester_end_presentations/: __init__.py  semester_end_presentations_dto.py  semester_end_presentations_entities.py  semester_end_presentations_router.py  semester_end_presentations_schema.py  semester_end_presentations_service.py
backend/backend/api/students/: __init__.py  students_dto.py  students_entities.py  students_router.py  students_schema.py  students_service.py
backend/backend/configs/: __init__.py  config.py
backend/backend/configs/envs/: base.py  dev.py  prod.py  test.py
backend/backend/core/: __init__.py  auth.py  crud_base_service.py  exceptions.py  types.py  validators.py
backend/backend/db/: __init__.py  base_schema.py  init_db.py  session.py
backend/backend/db/migrations/: env.py  script.py.mako
backend/backend/drivers/pg/: __init__.py
backend/backend/drivers/webapi/: api.py  dependencies.py  init_app.py
backend/backend/entities/: __init__.py  professor.py  semester_end_evaluation.py  semester_evaluation.py  student.py  types.py
backend/backend/entities/evaluations/: courses.py  presentation.py
backend/backend/usecases/: __init__.py  create_new_presentation.py  create_new_presentation_evaluation.py  create_new_professor_record.py  create_new_student_record.py  delete_presentation.py  delete_professor_record.py  delete_student_record.py  errors.py  get_semester_end_evaluation_summary.py  get_semester_end_evaluation_summary_by_supervisor_id.py  inputs.py  list_all_presentations.py  list_all_professors.py  list_all_students.py  update_presentation_info.py  update_professor_info.py  update_student_info.py  validators.py  verify_professor_email.py
backend/backend/usecases/lab_rotation/: __init__.py  create_new_lab_rotation_evaluation.py  update_lab_rotation_evaluation.py
backend/backend/usecases/lab_seminar/: __init__.py  create_new_lab_seminar_evaluation.py  update_lab_seminar_evaluation.py
backend/migrations/: env.py
backend/migrations/versions/: 18039f0230b3_create_all_tables.py  8badda08d5c3_create_all_tables.py  c4b64d6e51f5_semester_end_evaluations_tables.py  d6db8d619e77_create_all_tables.py  e35113d3ba7c_presentation_evaluations_comment.py  f721c0ecb59e_professors_students_presentations_.py
backend/sit_igp_management_backend/: dependencies.py  main.py
backend/sit_igp_management_backend/api/: api.py
backend/sit_igp_management_backend/core/: __init__.py  config.py  crud_base_service.py  exceptions.py  types.py
backend/sit_igp_management_backend/db/: __init__.py  base_schema.py  init_db.py  session.py
backend/tests/: conftest.py  test_env.py  utils.py
backend/tests/api/: test_api.py  test_presentation_evaluations_router.py  test_presentations_router.py  test_professors_router.py  test_students_router.py
(+174 files in other folders)
